--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<div class="p-4 md:p-12 text-center lg:text-left">
 			<!-- Image for mobile view-->
-			<div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center" style="background-image: url('assets/img/pratik1.jpg')"></div>
+			<div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center" style="background-image: url('assets/img/Smimgpic.png')"></div>
 			
 			<h1 class="text-3xl font-bold pt-8 lg:pt-0">Pratik Ramchandra Mane</h1>
 			<div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-blue-600 opacity-25"></div>
@@ -86,7 +86,7 @@
 	<div class="w-full lg:w-2/5">
 		<!-- Big profile image for side bar (desktop) -->
 		
-		<img src="assets/img/pratik2-3.jpg" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
+		<img src="assets/img/Lgimgpic.jpg" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
 		
 		
 	</div>
