--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<div class="w-full lg:w-2/5">
 		<!-- Big profile image for side bar (desktop) -->
 		
-		<img src="assets/img/Lgimgpic.jpg" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
+		<img src="assets/img/IMG_20220103_120717.png" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block">
 		
 		
 	</div>
